--- a/otherCoolWebsite.html
+++ b/otherCoolWebsite.html
@@ -4,3 +4,4 @@ this is more stuff that i didn't communicate with the team
 "All this is added content to this super super cool website and I did this in github"
 this is feature from team 1
 this is feature from team 2222222222
+cool
